--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.9.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0     http://pear.php.net/dtd/tasks-1.0.xsd     http://pear.php.net/dtd/package-2.0     http://pear.php.net/dtd/package-2.0.xsd">
+<package packagerversion="1.9.2" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0     http://pear.php.net/dtd/tasks-1.0.xsd     http://pear.php.net/dtd/package-2.0     http://pear.php.net/dtd/package-2.0.xsd">
  <name>Payment_Process2</name>
  <channel>pear.php.net</channel>
  <summary>A PHP5 Payment process API</summary>
@@ -16,11 +16,11 @@
   <email>damien.bezborodow@valex.com.au</email>
   <active>yes</active>
  </lead>
- <date>2010-10-25</date>
- <time>21:47:28</time>
+ <date>2011-10-31</date>
+ <time>14:16:24</time>
  <version>
-  <release>0.3.1</release>
-  <api>0.3.0</api>
+  <release>0.4.0</release>
+  <api>0.4.0</api>
  </version>
  <stability>
   <release>alpha</release>
@@ -28,32 +28,32 @@
  </stability>
  <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD Style</license>
  <notes>
-Request #17105 	Drop Net_Curl
-Doc Bug #16337 	Auto-documentation for payment process 2 is showing up as two packages
+Update HTTP_Request2 dep
+Update to XML_Util2
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
    <file baseinstalldir="/" md5sum="845c2a3bd81594648fde2ad7536f74dc" name="examples/creditcard.php" role="doc" />
    <file baseinstalldir="/" md5sum="15141cdac58c532d988587461e155f3a" name="examples/echeck.php" role="doc" />
    <file baseinstalldir="/" md5sum="ef8afff673acf0c3a8dc309392db9dd5" name="examples/linkpoint.php" role="doc" />
-   <file baseinstalldir="/" md5sum="6172332a3b8c6d770294bfbdab2e5ffd" name="examples/Payment_Process-example.php" role="doc" />
+   <file baseinstalldir="/" md5sum="c442570a3fd8233f439f5fe152341493" name="examples/Payment_Process-example.php" role="doc" />
    <file baseinstalldir="/" md5sum="1ea9039237e8f1358812c8d393697b1c" name="examples/TrustCommerce_creditcard.php" role="doc" />
-   <file baseinstalldir="/" md5sum="38b764fdb624df4e8b9a39e7ab5af967" name="Payment/Process2.php" role="php" />
-   <file baseinstalldir="/" md5sum="69bce2783a6fe36b53c3c67892bf7706" name="Payment/Process2/ANZ.php" role="php" />
-   <file baseinstalldir="/" md5sum="6bda69266cb8468c47932bd39cde620f" name="Payment/Process2/AuthorizeNet.php" role="php" />
-   <file baseinstalldir="/" md5sum="af31c571d7a48f160e458e6e5c6849a9" name="Payment/Process2/Bibit.php" role="php" />
-   <file baseinstalldir="/" md5sum="34cbe8f15ffde4c992f9291b2df8c364" name="Payment/Process2/Common.php" role="php" />
+   <file baseinstalldir="/" md5sum="65497168e5bee7c0a8ae36c5b032c16b" name="Payment/Process2.php" role="php" />
+   <file baseinstalldir="/" md5sum="acb7d7b19a484aa71e20cbddc0c5c8db" name="Payment/Process2/ANZ.php" role="php" />
+   <file baseinstalldir="/" md5sum="26cf474d42ed91555fe3d09e62ad96bf" name="Payment/Process2/AuthorizeNet.php" role="php" />
+   <file baseinstalldir="/" md5sum="a54853b595ced2eca19604c28bb058c3" name="Payment/Process2/Bibit.php" role="php" />
+   <file baseinstalldir="/" md5sum="bdcb74ec8ac675667fd05214950ffaf9" name="Payment/Process2/Common.php" role="php" />
    <file baseinstalldir="/" md5sum="9b96a4237b36ec77290db58b55f4a876" name="Payment/Process2/Driver.php" role="php" />
-   <file baseinstalldir="/" md5sum="6bff82f32197fcef32b4f95c59705490" name="Payment/Process2/Dummy.php" role="php" />
+   <file baseinstalldir="/" md5sum="5fd727c2090376bdd61e26d7f8fc6a41" name="Payment/Process2/Dummy.php" role="php" />
    <file baseinstalldir="/" md5sum="79d6586d4e9255afbd504dac115f23fc" name="Payment/Process2/Exception.php" role="php" />
-   <file baseinstalldir="/" md5sum="5056f91763c209f658c6574ddcef9deb" name="Payment/Process2/LinkPoint.php" role="php" />
-   <file baseinstalldir="/" md5sum="cb64c09d403f6dbf239b8aeb2c4c59e6" name="Payment/Process2/Offline.php" role="php" />
-   <file baseinstalldir="/" md5sum="2e00f238dbf2604be2e3d204bcedd8a4" name="Payment/Process2/PayPal.php" role="php" />
+   <file baseinstalldir="/" md5sum="199cbf4978ff8266dcb94b88a98bef06" name="Payment/Process2/LinkPoint.php" role="php" />
+   <file baseinstalldir="/" md5sum="352b43b17d3d5cff595acb3be5727ceb" name="Payment/Process2/Offline.php" role="php" />
+   <file baseinstalldir="/" md5sum="43924589db8077be7ec43b8cc4d25062" name="Payment/Process2/PayPal.php" role="php" />
    <file baseinstalldir="/" md5sum="a693f11e8aa9f444837050b3c5e50f78" name="Payment/Process2/Result.php" role="php" />
-   <file baseinstalldir="/" md5sum="8e542202feaad23d222bde7cbfc09785" name="Payment/Process2/Transfirst.php" role="php" />
-   <file baseinstalldir="/" md5sum="795684a6df9ff1efa79cc20afc7a9be9" name="Payment/Process2/TrustCommerce.php" role="php" />
-   <file baseinstalldir="/" md5sum="61ab4cbf105db3fbd450ff698d57b93d" name="Payment/Process2/Type.php" role="php" />
-   <file baseinstalldir="/" md5sum="688352a1e6eb5c5e781a7063d5d6b861" name="Payment/Process2/Result/ANZ.php" role="php" />
+   <file baseinstalldir="/" md5sum="ee0da8dbe9b149b8a598c80501df670e" name="Payment/Process2/Transfirst.php" role="php" />
+   <file baseinstalldir="/" md5sum="03c0748dae3bf5a7755c58feea34f438" name="Payment/Process2/TrustCommerce.php" role="php" />
+   <file baseinstalldir="/" md5sum="a0aca3f1bea1181421048d3a134f3fbf" name="Payment/Process2/Type.php" role="php" />
+   <file baseinstalldir="/" md5sum="c823c321af67b582435760fb1510213e" name="Payment/Process2/Result/ANZ.php" role="php" />
    <file baseinstalldir="/" md5sum="c563777c5abc9756192e5e08b0e333d8" name="Payment/Process2/Result/AuthorizeNet.php" role="php" />
    <file baseinstalldir="/" md5sum="d318cc0bed63ce9708a26b5a24e6fd99" name="Payment/Process2/Result/Bibit.php" role="php" />
    <file baseinstalldir="/" md5sum="be953fd71f4811e77e75b56fb97c79be" name="Payment/Process2/Result/Driver.php" role="php" />
@@ -62,32 +62,32 @@ Doc Bug #16337 	Auto-documentation for payment process 2 is showing up as two pa
    <file baseinstalldir="/" md5sum="cd522ac193725bb677a358b850695b70" name="Payment/Process2/Result/PayPal.php" role="php" />
    <file baseinstalldir="/" md5sum="d8976ba01901216e6e20c016a2ea4b17" name="Payment/Process2/Result/Transfirst.php" role="php" />
    <file baseinstalldir="/" md5sum="0c8844ab56c3afe32a78e815da6aea8b" name="Payment/Process2/Result/TrustCommerce.php" role="php" />
-   <file baseinstalldir="/" md5sum="c78bd5a3e135b46c92a0533e17ff89d7" name="Payment/Process2/Type/CreditCard.php" role="php" />
-   <file baseinstalldir="/" md5sum="416ad68156b994d0f3b49f989849ca03" name="Payment/Process2/Type/eCheck.php" role="php" />
+   <file baseinstalldir="/" md5sum="290ce941f05455790c5b4417b4e623d6" name="Payment/Process2/Type/CreditCard.php" role="php" />
+   <file baseinstalldir="/" md5sum="9b7006d8fd64e40572e830fdfe69cda4" name="Payment/Process2/Type/eCheck.php" role="php" />
    <file baseinstalldir="/" md5sum="739552eb789e202453fbf0c31f9ac248" name="Payment/Process2/Type/MockCreditCard.php" role="php" />
-   <file baseinstalldir="/" md5sum="a7ea522828b761339752d3676526ed21" name="tests/AllTests.php" role="test" />
-   <file baseinstalldir="/" md5sum="732759fe2f3a83689a4fc84b16a9de98" name="tests/Payment_Process2Test.php" role="test" />
-   <file baseinstalldir="/" md5sum="c224d689e9a637a89406a751f10fd5bb" name="tests/Payment_Process2_ANZTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="53873a644741c8cb204cf4f83308c8ba" name="tests/Payment_Process2_AuthorizeNetTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="c402113564d152530790cc12c3ebaf64" name="tests/Payment_Process2_BibitTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="067cebe4a7c4da6b2e0c43cb2219aea0" name="tests/Payment_Process2_CommonTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="194ca5bba74f8a303799dac9ca7f578f" name="tests/Payment_Process2_DummyTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="af8c7f96b4ae73f8b09a81fc88fee32e" name="tests/Payment_Process2_LinkPointTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="5986fad26156c9661ffb8beb973d749a" name="tests/Payment_Process2_PayPalTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="779993664bf3c05b890a7582a9013e02" name="tests/Payment_Process2_ResultTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="381cc1f3120436a1bafbabafc1185c05" name="tests/AllTests.php" role="test" />
+   <file baseinstalldir="/" md5sum="d88a08134f220c07b415e72dfb91f13c" name="tests/Payment_Process2Test.php" role="test" />
+   <file baseinstalldir="/" md5sum="28efd0b7d0642d4538f09f9dbc361ed7" name="tests/Payment_Process2_ANZTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="b24899e20e9e5b62a2f0a309aeccaf9f" name="tests/Payment_Process2_AuthorizeNetTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="41ea76a4020953c2aef0d71e960195b9" name="tests/Payment_Process2_BibitTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="82631888c3195a0b28a921046f67ae29" name="tests/Payment_Process2_CommonTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="e57141dd6042b4214e78301d905227be" name="tests/Payment_Process2_DummyTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="f6b03f96e9bcbb5738de0c4a41a15d6f" name="tests/Payment_Process2_LinkPointTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="837754a99db9f3ce0689d6fd8b5aa5ed" name="tests/Payment_Process2_PayPalTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="2bf1efe603437587c232cee95ff8f6dc" name="tests/Payment_Process2_ResultTest.php" role="test" />
    <file baseinstalldir="/" md5sum="25a821aa1417c270e49e1d13c90b5678" name="tests/Payment_Process2_Result_ANZTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="e29d191c65806ac39537e83ef02a6b9e" name="tests/Payment_Process2_Result_AuthorizeNetTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="99eaea52fb233e2c83023f53e8137075" name="tests/Payment_Process2_Result_BibitTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="2d071de958fb1c877d5c46fb77d5da9f" name="tests/Payment_Process2_Result_DummyTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="f6c30dd4251fc8fbe84d606400064619" name="tests/Payment_Process2_Result_LinkPointTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="0ff032e52817c53333a6238377337c98" name="tests/Payment_Process2_Result_PayPalTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="5df5870f029b7e111ccc13118eaa8115" name="tests/Payment_Process2_Result_TransfirstTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="2e3f08c0a9e39c6d5faca73c046bbba9" name="tests/Payment_Process2_Result_TrustCommerceTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="ecab29fd007cfcb49f1a37b9ab1540c2" name="tests/Payment_Process2_TransfirstTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="32ffdf5368c6e16bb24701701e38acd3" name="tests/Payment_Process2_TrustCommerceTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="a1e418a3844a5f87ef4df56717434d2a" name="tests/Payment_Process2_TypeTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="c90762012db40b6734ea8326b82c52ca" name="tests/Payment_Process2_Type_CreditCardTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="aa2740fdf87282c535be83327554f0f7" name="tests/Payment_Process2_Type_eCheckTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="164b295addd8da8340f20739aa465f1a" name="tests/Payment_Process2_Result_AuthorizeNetTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="09582c2706eb9b317188af525a9e8f69" name="tests/Payment_Process2_Result_BibitTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="6ead7db861a244c4fcb5837e16cb91e6" name="tests/Payment_Process2_Result_DummyTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="7ae7e6979e2189f5a01ec508f353d509" name="tests/Payment_Process2_Result_LinkPointTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="2726e9acd1e1368d2300d2b0d1c0d3fd" name="tests/Payment_Process2_Result_PayPalTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="858abb1892afe06b3f70b8507af1c76c" name="tests/Payment_Process2_Result_TransfirstTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="5b2c4a6e78994793f58fe2130a23b693" name="tests/Payment_Process2_Result_TrustCommerceTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="3aadfa27f0672ea0ebb892dd8b7283e0" name="tests/Payment_Process2_TransfirstTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="a5aa4223e2c51ecd96811c332729a148" name="tests/Payment_Process2_TrustCommerceTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="9a4fb577318be4f32b42be4659eb77b7" name="tests/Payment_Process2_TypeTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="c2cdbfe3be42a092b172b84e8a291680" name="tests/Payment_Process2_Type_CreditCardTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="cdbc6b7ef802bf76a34aff1dfe3f96fd" name="tests/Payment_Process2_Type_eCheckTest.php" role="test" />
    <file baseinstalldir="/" md5sum="d4d3e8c4ae6d0a45c71e7971a2350254" name="tests/data/ANZ/communication.html" role="test" />
    <file baseinstalldir="/" md5sum="78b7e05ee96f04797b0010ddd406e06c" name="tests/data/ANZ/declined.html" role="test" />
    <file baseinstalldir="/" md5sum="aae47774243159a6f87a7d91a846d558" name="tests/data/ANZ/declined_go_away.html" role="test" />
@@ -105,6 +105,8 @@ Doc Bug #16337 	Auto-documentation for payment process 2 is showing up as two pa
    <file baseinstalldir="/" md5sum="d0a4849761b87f34a6bbbb4ccd24a063" name="tests/data/TrustCommerce/success.html" role="test" />
    <file baseinstalldir="/" md5sum="a56444768dbdff2d9b87f61ea0dc1d89" name="Changelog" role="data" />
    <file baseinstalldir="/" md5sum="3136cdc1c2f7f59e9d5887f1979af5ba" name="LICENSE-BSD" role="data" />
+   <file baseinstalldir="/" md5sum="d1b8778cbc0893346b3d18ceb46c80d0" name="package.xml~" role="data" />
+   <file baseinstalldir="/" md5sum="a797ee28983fdbfa6b8b605aaf3b6a3c" name="README" role="data" />
   </dir>
  </contents>
  <dependencies>
@@ -113,7 +115,7 @@ Doc Bug #16337 	Auto-documentation for payment process 2 is showing up as two pa
     <min>5</min>
    </php>
    <pearinstaller>
-    <min>1.4.0</min>
+    <min>1.9.2</min>
    </pearinstaller>
    <package>
     <name>Validate_Finance_CreditCard</name>
@@ -123,12 +125,12 @@ Doc Bug #16337 	Auto-documentation for payment process 2 is showing up as two pa
    <package>
     <name>HTTP_Request2</name>
     <channel>pear.php.net</channel>
-    <min>0.3.0</min>
+    <min>2.0.0</min>
    </package>
    <package>
-    <name>XML_Util</name>
+    <name>XML_Util2</name>
     <channel>pear.php.net</channel>
-    <min>1.2.1</min>
+    <min>0.1.0</min>
    </package>
   </required>
  </dependencies>
@@ -226,6 +228,22 @@ Added a MockCreditCard for testing
    <notes>
 Request #17105 	Drop Net_Curl
 Doc Bug #16337 	Auto-documentation for payment process 2 is showing up as two packages
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.4.0</release>
+    <api>0.4.0</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2011-10-31</date>
+   <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD Style</license>
+   <notes>
+Update HTTP_Request2 dep
+Update to XML_Util2
    </notes>
   </release>
  </changelog>
