--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "autoload": {
         "psr-0": {
-            "Payment_Process2": "./"
+            "Payment": "./"
         }
     },
     "description": "More info available on: http://pear.php.net/package/Payment_Process2",
@@ -28,7 +28,8 @@
     },
     "type": "library",
     "require": {
-        "pear/pear_exception": "*"
+        "pear/pear_exception": "*",
+        "pear/validate_finance_creditcard": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
